# crc-hash

./: CMakeLists.txt  LICENSE  README.md  algorithms.h  crc.h  hash.h  main.cpp
examples/: CMakeLists.txt  main.cpp
includes/noch/: algorithms.h  hash.h  io.h
includes/noch/algorithms/: crc.h  fnv.h  mixed.h  murmur.h
includes/noch/detail/: imurmur3.h
sources/: io.cpp
sources/detail/: imurmur3.cpp
